# project-template

./: .editorconfig  .gitignore  .lefthook.yml  .mise.toml  .prettierignore  .windsurfrules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.ts  mise.toml  package.json  renovate.config.js  rust-toolchain.toml  tsconfig.json
.claude/templates/: adr-template.md  minimal-adr-template.md  project-direction-decisions-template.md
.config/: .cspell.json
.github/: renovate.config.js  renovate.json
.github/workflows/: renovate.yaml  rust-lint.yml  scorecard.yaml
.tasks/: tasks.rs.toml
backend/java-example/: .gitignore  README.md  build.gradle
backend/java-example/src/main/java/com/example/greeting/: Application.java  GreetingService.java
backend/java-example/src/main/resources/: logback.xml
backend/java-example/src/test/java/com/example/greeting/: GreetingServiceTest.java
crates/: .gitignore
crates/lib/: Cargo.toml
crates/lib/dummy/: Cargo.toml
docs/: .gitignore
scripts/: bootstrap.ps1  bootstrap.sh
scripts/bootstrap/: backend-java.ps1  backend-java.sh
