[package]
name = "todo-lib-dummy"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
